--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "parser": "@typescript-eslint/parser"
   },
   "browserslist": {
     "production": [
