--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "react-router-dom": "^6.3.0",
     "reactstrap": "^9.0.2"
   }
 }
