--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-popper": "^2.2.5",
     "react-scripts": "5.0.1",
+    "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
