--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "react-router-dom": "^6.3.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "reactstrap": "^9.0.2"
   }
 }
