--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-popper": "^2.2.5",
+    "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -41,11 +43,11 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.22.0",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "react-router-dom": "^6.3.0",
-    "@typescript-eslint/parser": "^5.22.0",
     "reactstrap": "^9.0.2"
   }
 }
