--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.0.0",
     "react-popper": "^2.2.5",
     "react-redux": "^8.0.1",
+    "react-redux-form": "^1.16.14",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "typescript": "^4.6.4",
