--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-redux-form": "^1.16.14",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
