--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "confusion",
   "version": "0.1.0",
+  "homepage": "https://aman10tiwana.github.io/react",
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.5",
