--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "cross-fetch": "^3.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-popper": "^2.2.5",
