--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "confusion",
   "version": "0.1.0",
-  "homepage": "https://aman10tiwana.github.io/react",
+  "homepage": "https://aman10tiwana.github.io/React/",
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.5",
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/parser": "^5.22.0",
     "cross-fetch": "^3.1.5",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^18.0.0",
     "react-popper": "^2.2.5",
     "react-redux": "^8.0.1",
     "react-redux-form": "^1.16.14",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
