--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "confusion",
   "version": "0.1.0",
-  "homepage": "https://aman10tiwana.github.io/React/",
+  "homepage": "https://aman10tiwana.github.io/React",
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.5",
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/parser": "^5.22.0",
     "cross-fetch": "^3.1.5",
+    "gh-pages": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-animation-components": "^3.0.0",
@@ -26,6 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
