--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-animation-components": "^3.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
     "react-popper": "^2.2.5",
     "react-redux": "^8.0.1",
