--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-fetch": "^3.1.5",
     "font-awesome": "^4.7.0",
     "gh-pages": "^4.0.0",
+    "heroku": "^7.60.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-animation-components": "^3.0.0",
