--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "font-awesome": "^4.7.0",
     "gh-pages": "^4.0.0",
     "heroku": "^7.60.2",
+    "json-server": "^0.17.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-animation-components": "^3.0.0",
@@ -39,7 +40,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json -p 3001 -d 2000"
   },
   "eslintConfig": {
     "extends": [
