--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
     "cross-fetch": "^3.1.5",
