--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
-    "start": "react-scripts start",
+    "start": "react-scripts start & json-server --watch db.json -p 3001 -d 2000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
