--- a/package.json
+++ b/package.json
@@ -38,11 +38,10 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
-    "start": "react-scripts start & json-server --watch db.json -p 3001 -d 2000",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch db.json -p 3001 -d 2000"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
